--- a/app/btp-cap-samples-ui5-app/package.json
+++ b/app/btp-cap-samples-ui5-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "btp-cap-samples-ui5-app",
   "version": "0.0.1",
-  "description": "Basic UI5 application in CAP",
+  "description": "basic ui5 application in CAP",
   "keywords": [
     "ui5",
     "openui5",
@@ -11,9 +11,12 @@
   "dependencies": {},
   "devDependencies": {
     "@ui5/cli": "^3.0.0",
-    "@sap/ux-ui5-tooling": "1"
+    "@sap/ux-ui5-tooling": "1",
+    "@sap/ui5-builder-webide-extension": "^1.1.9",
+    "ui5-task-zipper": "^3.1.3"
   },
   "scripts": {
-    "deploy-config": "npx -p @sap/ux-ui5-tooling fiori add deploy-config cf"
+    "deploy-config": "npx -p @sap/ux-ui5-tooling fiori add deploy-config cf",
+    "build:cf": "ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo"
   }
 }
