--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
   "dependencies": {
     "@sap/cds": "^8",
     "express": "^4",
-    "@sap/xssec": "^4",
+    "@sap/xssec": "^4.2.7",
     "@cap-js/hana": "^1"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.7.0",
     "@cap-js/sqlite": "^1",
-    "@sap/cds-dk": "^8"
+    "@sap/cds-dk": "^8",
+    "rimraf": "^5.0.5",
+    "mbt": "^1.2.29"
   },
   "scripts": {
     "start": "cds-serve",
-    "watch-btp-cap-samples-ui5-app": "cds watch --open btp-cap-samples-ui5-app/webapp/index.html?sap-ui-xx-viewCache=false"
+    "watch-btp-cap-samples-ui5-app": "cds watch --open btp-cap-samples-ui5-app/webapp/index.html?sap-ui-xx-viewCache=false",
+    "undeploy": "cf undeploy btp-cap-samples --delete-services --delete-service-keys --delete-service-brokers",
+    "build": "rimraf resources mta_archives && mbt build --mtar archive",
+    "deploy": "cf deploy mta_archives/archive.mtar --retries 1"
   },
   "cds": {
     "requires": {
